checkin 3